# SSB-PRO-ESSENTIAL

./: Landing.html  admin.html  index.html  vercel.json
Downloads/Lean-Trader-continue-from-micro-fix/: CHECK_BALANCE_MANUAL.sh  CHECK_BALANCE_SOURCE.sh  FIX_BALANCE_FETCH.md  MANUAL_COMMANDS.txt  TRACE_BALANCE_FETCH.sh
Downloads/LeanTrader_ForexPack/: .env  .env.example  PR_DRAFT.md  README_FX.md  README_PAPER_RUN.md  accounts.yml  acct_portfolio.py  alpha_engines.py  analyzer.py  auto_dashboard.py  auto_loop.py  auto_pilot.py  backtest_fx.py  best_params.json  brain.py  brain_loop.py  build_history.py  build_universe.py  bybit_adapter.py  bybit_smoke.py  calendar_ingest.py  calendar_utils.py  charting.py  cmd_reader.py  config.yml  config_fx.yml  config_meme.yml  cross_examiner.py  crypto_cctx.py  crypto_diag.py  crypto_trader.py  daemonize.md  dashboard_reporter.py  data_sources.py  docker-compose.observability.yml  execution_adv.py  forex_utils.py  futures_signals.py  futures_smoke.py  fx_partial_tp_sanity.py  (+80 more)
Downloads/MailSiftAppStructured/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  app.py  file_parsing.py  gui.py  payments.py  pyproject.toml  requirements.txt  server.py
Downloads/MailSiftAppStructured/.github/workflows/: lint.yml
Downloads/MailSiftAppStructured/templates/: admin_payments.html  index.html  paywall.html
Downloads/MailSiftAppStructured/tests/: test_app_routes.py  test_extraction.py  test_file_parsing.py  test_payments.py  test_public_api.py  test_server.py  test_smoke_routes.py  test_url_extract.py
api/: index.py  license_logic.py
(+415 files in other folders)
